Changed the font color of input box

--- a/Auth Page/auth.css
+++ b/Auth Page/auth.css
@@ -46,7 +46,7 @@ body{
 }
 
 .container a{
-    color: #333;
+    color: white;
     font-size: 13px;
     text-decoration: none;
     margin: 15px 0 10px;
@@ -91,6 +91,7 @@ body{
     border-radius: 8px;
     width: 100%;
     outline: none;
+    color: white;
 }
 
 .form-container{
