--- a/css/auth1-style.css
+++ b/css/auth1-style.css
@@ -109,7 +109,7 @@ body{
     height: 100px;
     margin: 9px;
     font-size: 24px;
-    color: #9B9A9A;
+    color: white;
     background-color: rgb(22, 22, 22);
     border: 2px solid rgb(22, 22, 22);
     border-radius: 30px;
